# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
include/: ai.h  board.h  game.h  mainmenuscreen.h  playscreen.h  resourcemanager.h  screen.h
src/: ai.cpp  board.cpp  game.cpp  main.cpp  mainmenuscreen.cpp  playscreen.cpp  resourcemanager.cpp
